--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
         android:id="@+id/listview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="3dp"
         android:background="#FFEB3B"
         app:layout_constraintBottom_toBottomOf="parent"
